close #509 remove selected input values in case of yes no swich in dilly dally form

--- a/_layouts/DillyDally.html
+++ b/_layouts/DillyDally.html
@@ -34,6 +34,7 @@ layout: page
 
                 <div id="timereg_form_part2a">
 
+                    <h4>Select Github repository<span>*</span></h4>
                     <select name="githubRepo" required>
                         <option value="" hidden selected>Select Github repository</option>
                         <option value="prolike/copenhagencoaching.dk">CCC</option>
@@ -63,7 +64,7 @@ layout: page
                 </div>
 
                 <div id="timereg_form_part2b">
-
+                    
                     <h4>Category <span>*</span></h4>
                     <p>Select from the list</p>
                     <select class="dropdown" name="category" required>
@@ -93,23 +94,6 @@ layout: page
         </div>
     </div>
 </div>
-<style>
-    .error {
-        padding: 15px;
-        border: 1px solid #d6e9c6;
-        border-radius: 4px;
-        color: red;
-        background-color: #dff0d8;
-    }
-
-    .success {
-        padding: 15px;
-        border: 1px solid #d6e9c6;
-        border-radius: 4px;
-        color: #3c763d;
-        background-color: #dff0d8;
-    }
-</style>
 <script src="/js/dillyDally.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/3.0.0/fetch.js"></script>
