--- a/_layouts/dd-worklog.html
+++ b/_layouts/dd-worklog.html
@@ -37,7 +37,8 @@ layout: page
                 </div>
 
                 <div id="timereg_form_part2a">
-
+                    
+                    <h4>Select Github repository<span>*</span></h4>
                     <select name="githubRepo" required>
                         <option value="" hidden selected>Select Github repository</option>
                         <option value="prolike/copenhagencoaching.dk">CCC</option>
