close #511 link to dilly dally sheet

--- a/_layouts/DillyDally.html
+++ b/_layouts/DillyDally.html
@@ -13,6 +13,10 @@ layout: page
             <form id="timereg_form">
                 <div id="timereg_form_part1">
 
+                    <h4>Email<span>*</span></h4>
+                    <p>prolike@prolike.io</p>
+                    <input type="email" name="workerId" value="" required>
+
                     <h4>Start time <span>*</span></h4>
                     <p>HH:MM</p>
                     <input type="datetime-local" name="startTime" value="" required>
@@ -64,7 +68,7 @@ layout: page
                 </div>
 
                 <div id="timereg_form_part2b">
-                    
+
                     <h4>Category <span>*</span></h4>
                     <p>Select from the list</p>
                     <select class="dropdown" name="category" required>
@@ -90,6 +94,9 @@ layout: page
 
             <div id="error"></div>
             <div id="success"></div>
+
+            <a href="https://docs.google.com/spreadsheets/d/10k8uATJTUOXLzXvobd53wXwwZkza0w099NHDmdYXVH4/edit#gid=0"
+                target="_blank" data-proofer-ignore>Link til Dilly Dally Google Sheet</a>
 
         </div>
     </div>
