--- a/_layouts/dd-worklog.html
+++ b/_layouts/dd-worklog.html
@@ -17,6 +17,10 @@ layout: page
             <form id="timereg_form">
                 <div id="timereg_form_part1">
 
+                    <h4>Email<span>*</span></h4>
+                    <p>prolike@prolike.io</p>
+                    <input type="email" name="worker_id" value="" required>
+
                     <h4>Start time <span>*</span></h4>
                     <p>HH:MM</p>
                     <input type="datetime-local" name="startTime" value="" required>
@@ -37,7 +41,7 @@ layout: page
                 </div>
 
                 <div id="timereg_form_part2a">
-                    
+
                     <h4>Select Github repository<span>*</span></h4>
                     <select name="githubRepo" required>
                         <option value="" hidden selected>Select Github repository</option>
@@ -98,6 +102,9 @@ layout: page
 
             <div id="error"></div>
             <div id="success"></div>
+
+            <a href="https://docs.google.com/spreadsheets/d/10k8uATJTUOXLzXvobd53wXwwZkza0w099NHDmdYXVH4/edit#gid=0"
+                target="_blank" data-proofer-ignore> Link til Dilly Dally Google Sheet</a>
 
         </div>
     </div>
