Refactor code as reusable code

--- a/_layouts/DillyDally.html
+++ b/_layouts/DillyDally.html
@@ -65,7 +65,7 @@ layout: page
                     <input type="time" name="fixedPrice" value="">
 
                     <input class="input btn" type="button" value="Submit"
-                        onclick="validatePostForm('timereg_form_post', 'timereg_form1', 'timereg_form2a')">
+                        onclick="validateForms('post', 'timereg_form1', 'timereg_form2a')">
 
                 </div>
 
@@ -91,7 +91,7 @@ layout: page
                     <input type="text" name="issueDescription" value="" required>
 
                     <input class="input btn" type="button" value="Submit"
-                        onclick="validatePostForm('timereg_form_post', 'timereg_form1', 'timereg_form2b')">
+                        onclick="validateForms('post', 'timereg_form1', 'timereg_form2b')">
                 </div>
             </form>
 
