--- a/_layouts/dd-worklog.html
+++ b/_layouts/dd-worklog.html
@@ -69,7 +69,7 @@ layout: page
                     <input type="time" name="fixedPrice" value="">
 
                     <input class="input btn" type="button" value="Submit"
-                        onclick="validatePutForm('timereg_form_put', 'timereg_form1', 'timereg_form2a')">
+                        onclick="validateForms('put', 'timereg_form1', 'timereg_form2a')">
                 </div>
 
                 <div id="timereg_form2b">
@@ -94,7 +94,7 @@ layout: page
                     <input type="text" name="issueDescription" value="" required>
 
                     <input class="input btn" type="button" value="Submit"
-                        onclick="validatePutForm('timereg_form_put', 'timereg_form1', 'timereg_form2b')">
+                        onclick="validateForms('put', 'timereg_form1', 'timereg_form2b')">
                 </div>
             </form>
 
