close #489 create google login for dilly dally

--- a/_layouts/dd-worklog.html
+++ b/_layouts/dd-worklog.html
@@ -9,6 +9,7 @@ layout: page
             <h1>Dilly Dally Time Registration<br>Change Worklog</h1>
 
             <a href="/dillyDally" data-proofer-ignore>Create Dilly Dally Worklog</a>
+            <center> <button id="demo-sign-out-button" onclick="signOut()">Sign out</button></center>
 
             <h4>Worklog ID <span>*</span></h4>
             <p>ID</p>
@@ -108,5 +109,6 @@ layout: page
     </div>
 </div>
 <script src="/js/dillyDally.js"></script>
+<script src="/js/firebaseHandler.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/3.0.0/fetch.js"></script>
