--- a/_layouts/ddlogin.html
+++ b/_layouts/ddlogin.html
@@ -20,7 +20,7 @@ layout: page
                         <strong>Now sign in!</strong>
                     </p>
                     <center> <button id="demo-sign-in-button" onclick="signIn()">Sign in with Google</button> </center>
-                    <center> <button id="demo-sign-out-button" onclikc="signOut()">Sign out</button></center>
+                    
                     <br>
                 </div>
             </div>
@@ -32,6 +32,7 @@ layout: page
 <!-- Import and configure the Firebase SDK -->
 <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
 <!-- If you do not serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
+<script src="/js/dillyDally.js"></script>
 <script src="/js/firebaseHandler.js"></script>
 
 </script>
