--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -4,11 +4,12 @@ layout: page
 
 <div class="events-container">
   <div class="wrapper">
-
-    {% for event in site.events %}
+{% assign sorted_events = site.events | sort: "date" | reverse %}
+    {% for event in sorted_events %}
     {% if event.lang == "gb" %}
     <a href="{{ event.url }}">
       <div class="events-boks">
+
         <img class="events-image {{ event.image-position }}" src="{{ event.image }}" alt="{{ event.title }}">
         <h3 class="events-date">{{ event.date | date: "%d %B %Y" }}</h3>
 
