--- a/_sass/pages/_anything-post.scss
+++ b/_sass/pages/_anything-post.scss
@@ -35,6 +35,7 @@
         object-fit: contain;
         display: block;
         margin: 25px 0;
+        width: 100%;
     }
 
     h1 {
@@ -90,8 +91,6 @@
 
     p, ul li, ol li {
         font-size: 18px;
-        line-height: 38px;
-        margin: 0;
     }
 }
 
