close #522 3 small hickups

--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -49,7 +49,7 @@ layout: page
         
         {% if posttime > nowunix %}
 
-        <h3 class="event-heading">Buy a ticket</h3>
+        <h3 class="event-heading">Get a ticket</h3>
 
 
         <div class="resp-container">
