--- a/_sass/miscellaneous/_event.scss
+++ b/_sass/miscellaneous/_event.scss
@@ -84,7 +84,7 @@
         a {
             color: black;
             font-weight: 500;
-            text-transform: uppercase;
+            //text-transform: uppercase;
         }
 
         a:hover {
