--- a/_sass/miscellaneous/_event.scss
+++ b/_sass/miscellaneous/_event.scss
@@ -3,6 +3,13 @@
     width: 100%;
     padding: 16.5vh 10vh 10vh 10vh;
 
+    .no-event {
+        width: 100%;
+        text-align: center;
+        background-color: #e2e2e2;
+        padding: 13vh 10vh 10vh 10vh;
+    }
+
     .wrapper {
         display: grid;
         margin: auto;
