close #527 past eventsclean up

--- a/_sass/pages/_events.scss
+++ b/_sass/pages/_events.scss
@@ -30,9 +30,8 @@
 
     h2 {
         font-size: 3.5vh;
-        line-height: 5.5vh;
         color: $black;
-        padding: 0 0 0vh 0;
+        padding: 1vh 0 0vh 0;
         font-weight: 700;
         font-family: 'Oswald', sans-serif;
         transition: .15s all ease-in-out;
