--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -21,9 +21,9 @@
     <footer>
       <hr>
       <div class="left">
-        <h1>Are <a class="yellow-text" href="/stories/flow/">you</a> our next acquaintance?<br>Talk to us about your <a
+        <h3>Are <a class="yellow-text" href="/stories/flow/">you</a> our next acquaintance? Talk to us about your <a
             class="yellow-text" href="mailto:hey@prolike.io?Subject=Hello%20again">next project</a> ideas,<br> or come
-          <a class="yellow-text" href="/contact/">swing by</a> for a chat!</h1>
+          <a class="yellow-text" href="/contact/">swing by</a> for a chat!</h3>
         <span>
           {% assign sorted_navi = site.pages | sort: 'order' %}
           {% for page in sorted_navi %}
