--- a/_sass/miscellaneous/_global.scss
+++ b/_sass/miscellaneous/_global.scss
@@ -18,15 +18,19 @@ body {
 }
 
 h1 {
-  font-size: 2.3rem;
+  font-size: 2rem !important;
 }
 
 h2 {
-  font-size: 1.9rem;
+  font-size: 1.7rem !important;
 }
 
 h3 {
-  font-size: 1.7rem;
+  font-size: 1.5rem !important;
+}
+
+h3 {
+  font-size: 1.3rem !important;
 }
 
 
