--- a/_sass/miscellaneous/_event.scss
+++ b/_sass/miscellaneous/_event.scss
@@ -34,7 +34,7 @@
 
         }
         .event-image-outer {
-            height: 600px;
+            height: 400px;
             margin-bottom: 5vh;
 
             .event-image {
@@ -129,6 +129,10 @@
 
 @media only screen and (max-width: 1024px) {
 
+    .event-image-outer {
+        height: 250px !important;
+    }
+
     .event-container {
 
         .wrapper {
@@ -191,7 +195,7 @@
     }
 
     .event-image-outer {
-        height: 250px !important;
+        height: 200px !important;
     }
 
 }
