--- a/_sass/miscellaneous/_global.scss
+++ b/_sass/miscellaneous/_global.scss
@@ -18,19 +18,23 @@ body {
 }
 
 h1 {
-  font-size: 2rem !important;
+  font-size: 3.4vh !important;
 }
 
 h2 {
-  font-size: 1.7rem !important;
+  font-size: 3vh !important;
 }
 
 h3 {
-  font-size: 1.5rem !important;
+  font-size: 2.8vh !important;
 }
 
 h4 {
-  font-size: 1.3rem !important;
+  font-size: 2.5vh !important;
+}
+
+h5 {
+  font-size: 2vh !important;
 }
 
 
