--- a/_includes/head.html
+++ b/_includes/head.html
@@ -80,6 +80,10 @@
     {% endif %}
   </title>
 
+  <!-- Custom styles for this template -->
+
+  <link href="/css/prolike/main.css" rel="stylesheet">
+
   <!-- Bootstrap core CSS -->
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
@@ -93,13 +97,12 @@
 
   <link rel="shortcut icon" type="image/x-icon" href="/images/icons/favicon.ico">
 
-  <!-- Custom styles for this template -->
-
-  <link href="/css/main.css" rel="stylesheet">
 
   <!-- Fullpage.js scripts -->
 
   <link rel="stylesheet" href="/css/fullpage.css">
+  <link rel="stylesheet" href="/css/rouge/syntax.molokai.css">
+
 
   <!-- Feed -->
 
